--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
+
+.App{
+  display: flex;
+  background: linear-gradient(70deg, coral, #ff5079, #ffd750);
+  flex-direction: column;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.name{
+  font-size: 8rem;
+  background: -webkit-linear-gradient( #09FBD3, #560A86);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: monospace;
+}
+
+.skills{
+  color:#35212A;
+  font-size: 1.5rem;
+}
+
+.about{
+  display: flex;
+  height: auto;
+}
+
+.my-img-div{
+  flex : 1;
+  width : 50%;
+
+}
+
+.my-img{
+  height:90%;
+  width: 90%;
+  background-size: cover;
+  display: block;
+  margin: auto;
+  padding-top: 20px;
+}
+
+.my-bio{
+  flex: 1;
+  padding-left: 15px;
+}
+
+.projects{
+  display: flex;
+  flex-direction: column;
+}
+
+.project-heading, h4, .note{
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.note{
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.project-details{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.project-overview{
+  display: flex;
+  margin-bottom: 40px;
+}
+.details{
+  flex: 2;
+  padding: 15px;
+  font-family: cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.project-name{
+  margin-left: 15px;
+  margin-bottom: -1rem;
+}
+
+@media (max-width: 1020px) {
+  .name{
+    font-size: 4rem;
   }
-  to {
-    transform: rotate(360deg);
+  .skills{
+    font-size: 1.2rem;
   }
+  .my-img{
+    height:70%;
+    width: 85%;
+    background-size: cover;
+  }
+}
+
+@media (max-width: 700px) {
+  .my-img{
+    height:50%;
+    width: 85%;
+    background-size: cover;
+  }
+}
+
+@media (max-width: 520px) {
+  .name{
+    font-size: 2rem;
+  }
+  .skills{
+    font-size: 1rem;
+  }
+  .about{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  .my-img-div{
+    width: 100%;
+  }
+
+  .my-img{
+    height:90%;
+    width: 90%;
+    background-size: cover;
+    display: block;
+    margin: auto;
+    padding-top: 20px;
+  }
+  .my-bio{
+    flex: 1;
+  }
+
+  .project-overview{
+    flex-direction: column;
+  }
+}
+
+ul li{
+  margin: 10px;
+  font-family:monospace;
+  font-size: 1.2rem;
 }
